k8s/backend.yaml
---
#Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-movies-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-movies-backend
  template:
    metadata:
      labels:
        app: redis-movies-backend
    spec:
      containers:
      - name: backend
        image: paulmross/movies-api:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: redis-movies-backend
spec:
  ports:
  - port: 8081
  selector:
    app: redis-movies-backend
