k8s/frontend.yaml
---
#Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-movies-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-movies-frontend
  template:
    metadata:
      labels:
        app: redis-movies-frontend
    spec:
      containers:
      - name: redis-movies-frontend
        image: paulmross/movies-frontend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: redis-movies-frontend
spec:
  ports:
  - port: 8080
  selector:
    app: redis-movies-frontend
